# colordoll

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
benchmark/: bench.py  demo.py
src/: __init__.py  colordoll.py
src/colordoll/: __init__.py  colordoll.py
